atualizando configuracoes